Get List Tache+Time Line